--- a/app/src/main/res/layout/activity_choose_program.xml
+++ b/app/src/main/res/layout/activity_choose_program.xml
@@ -5,58 +5,69 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ChooseProgramActivity"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:src="@mipmap/ic_launcher_foreground"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="60dp"/>
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Scheduler"
-        android:textSize="48dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/main"/>
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:gravity="center_vertical">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher_foreground"
+            android:layout_marginHorizontal="10dp"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="60dp"
-        android:hint="მიუთითეთ პროგრამის ID"
-        android:textColor="@color/dark"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Scheduler"
+            android:textSize="48dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/main"/>
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_login"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="შესვლა"
-        android:textColor="@color/secondary"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="40dp"/>
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ან"
-        android:textAlignment="center"
-        android:textColor="@color/main"
-        android:layout_marginTop="10dp"/>
-    <Button
-        android:id="@+id/btn_create_program"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="ახალი პროგრამის შექმნა"
-        android:textColor="@color/secondary"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"/>
+        android:orientation="vertical"
+        android:paddingBottom="30dp">
 
+        <EditText
+            android:id="@+id/txtProgramCode"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="20dp"
+            android:hint="მიუთითეთ პროგრამის ID"
+            android:textColor="@color/dark"
+            android:layout_marginBottom="20dp"/>
 
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="შესვლა"
+            android:textColor="@color/secondary"
+            android:layout_marginHorizontal="20dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ან"
+            android:textAlignment="center"
+            android:textColor="@color/main"/>
+
+        <Button
+            android:id="@+id/btn_create_program"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="ახალი პროგრამის შექმნა"
+            android:textColor="@color/secondary"
+            android:layout_marginHorizontal="20dp"/>
+    </LinearLayout>
 
 </LinearLayout>
