--- a/app/src/main/res/layout/activity_create_program.xml
+++ b/app/src/main/res/layout/activity_create_program.xml
@@ -8,45 +8,60 @@
     android:orientation="vertical"
     android:background="@color/white">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:src="@mipmap/ic_launcher_foreground"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="60dp"/>
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Scheduler"
-        android:textSize="48dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/main"/>
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:gravity="center_vertical">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher_foreground"
+            android:layout_marginHorizontal="10dp"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="60dp"
-        android:hint="პროგრამის დასახელება"
-        android:textColor="@color/dark"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Scheduler"
+            android:textSize="48dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/main"/>
+    </LinearLayout>
 
-    <EditText
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:hint="სერვერის მისამართი"
-        android:textColor="@color/dark"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="30dp">
 
-    <Button
-        android:id="@+id/btn_register_program"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:text="პროგრამის რეგისტრაცია"
-        android:textColor="@color/secondary"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="40dp"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="20dp"
+            android:hint="პროგრამის დასახელება"
+            android:textColor="@color/dark"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="20dp"
+            android:hint="სერვერის მისამართი"
+            android:textColor="@color/dark"/>
+
+        <Button
+            android:id="@+id/btn_register_program"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:text="პროგრამის რეგისტრაცია"
+            android:textColor="@color/secondary"
+            android:layout_marginHorizontal="20dp"/>
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
