--- a/app/src/main/res/layout/activity_create_program.xml
+++ b/app/src/main/res/layout/activity_create_program.xml
@@ -16,16 +16,16 @@
         android:gravity="center_vertical">
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="100dp"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_launcher_foreground"
-            android:layout_marginHorizontal="10dp"/>
+            android:layout_marginHorizontal="90dp"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Scheduler"
-            android:textSize="48dp"
+            android:textSize="34dp"
             android:textAlignment="center"
             android:textStyle="bold"
             android:textColor="@color/main"/>
@@ -35,9 +35,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingBottom="30dp">
+        android:paddingBottom="10dp">
 
         <EditText
+            android:id="@+id/txtProgramName"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginHorizontal="20dp"
@@ -45,10 +46,11 @@
             android:textColor="@color/dark"/>
 
         <EditText
+            android:id="@+id/txtServerURL"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginHorizontal="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:hint="სერვერის მისამართი"
             android:textColor="@color/dark"/>
 
