--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,21 +8,28 @@
     android:orientation="vertical"
     android:background="@color/white">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:src="@mipmap/ic_launcher_foreground"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="60dp"/>
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Scheduler"
-        android:textSize="48dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/main"/>
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:gravity="center_vertical">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher_foreground"
+            android:layout_marginHorizontal="90dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Scheduler"
+            android:textSize="34dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/main"/>
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_signin"
@@ -32,6 +39,6 @@
         android:textColor="@color/white"
         android:layout_marginHorizontal="20dp"
         android:drawableLeft="@drawable/icons8_google__1_"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginBottom="10dp"/>
 
 </LinearLayout>
