--- a/app/src/main/res/layout/activity_program_creation_success.xml
+++ b/app/src/main/res/layout/activity_program_creation_success.xml
@@ -8,37 +8,50 @@
     android:orientation="vertical"
     android:background="@color/white">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:src="@mipmap/ic_launcher_foreground"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="60dp"/>
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Scheduler"
-        android:textSize="48dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/main"/>
+        android:orientation="vertical"
+        android:layout_weight="1"
+        android:gravity="center_vertical">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:src="@mipmap/ic_launcher_foreground"
+            android:layout_marginHorizontal="90dp"/>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:src="@drawable/ic_baseline_check_circle_24"
-        android:layout_marginVertical="20dp"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Scheduler"
+            android:textSize="34dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:textColor="@color/main"/>
+    </LinearLayout>
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="პროგრამა წარმატებით დაემატა!"
-        android:textColor="@color/main"
-        android:textSize="20dp"
-        android:paddingHorizontal="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"/>
+        android:orientation="vertical"
+        android:paddingBottom="10dp">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_baseline_check_circle_24"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="პროგრამა წარმატებით დაემატა!"
+            android:textAlignment="center"
+            android:textColor="@color/main"
+            android:textSize="10dp"
+            android:paddingHorizontal="20dp"
+            android:layout_marginBottom="40dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -46,19 +59,19 @@
         android:text="პროგრამის კოდი:"
         android:textColor="@color/main"
         android:textSize="20dp"
-        android:paddingHorizontal="20dp"
-        android:layout_marginBottom="10dp"/>
+        android:paddingHorizontal="20dp"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:enabled="false"
-        android:textSize="44dp"
+        android:textSize="33dp"
         android:textAlignment="center"
         android:hint="123456"
         android:textColor="@color/dark"
-        android:textColorHint="@color/dark"/>
+        android:textColorHint="@color/dark"
+        android:layout_marginBottom="10dp"/>
 
     <Button
         android:id="@+id/btn_main_page"
@@ -66,7 +79,8 @@
         android:layout_height="60dp"
         android:text="მთავარი გვერდი"
         android:textColor="@color/secondary"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginHorizontal="20dp"/>
+
+    </LinearLayout>>
 
 </LinearLayout>
