--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,8 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.Scheduler.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Scheduler.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
