--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,10 @@
         android:padding="5dp">
 
         <ImageView
-            android:id="@+id/filter_btn"
+            android:id="@+id/settings_btn"
             android:layout_width="36dp"
             android:layout_height="36dp"
-            android:src="@drawable/ic_baseline_filter_list_24"/>
+            android:src="@drawable/baseline_settings_24"/>
 
         <ImageView
             android:id="@+id/refresh"
