--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -45,7 +45,7 @@
             layout="@layout/notifications_layout"></include>
 
         <include
-            layout="@layout/filter_layout"></include>
+            layout="@layout/settings_layout"></include>
 
     </RelativeLayout>
 </FrameLayout>
